4. Kubernetes/5. Cloud Infra GCP/ingress-welcome.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-welcome
  namespace: welcome
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "my-static-ip-address"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/v1beta1.FrontendConfig: "welcome-frontendconfig"
    networking.gke.io/managed-certificates: managed-cert
spec:
  tls:
  - hosts:
    - app.welcome.com # example domain
  rules:
  - host: app.welcome.com # example domain
    http:
      paths:
      - path: /
        pathType: ImplementationSpecificss
        backend:
          service:
            name: service-welcome
            port:
              number: 80
